test-suite/tests/ui/designated/duplicate_attribute.stderr
error: parameter is already designated
 --> tests/ui/designated/duplicate_attribute.rs:5:27
  |
5 | pub struct Test<#[stated] #[stated] S>;
  |                           ^^^^^^^^^

error: parameter is already designated
  --> tests/ui/designated/duplicate_attribute.rs:10:5
   |
10 |     #[stated] S,
   |     ^^^^^^^^^
